<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="dev_mode_switch"
        android:summary="@string/pref_description_devmode"
        android:title="@string/pref_title_devmode" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="version_override_switch"
        android:summary="@string/pref_description_ver_override"
        android:title="@string/pref_title_ver_override" />

    <EditTextPreference
        android:dependency="version_override_switch"
        android:key="user_version"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_version_user" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->

</PreferenceScreen>
