<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/graph_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="layout/layout_eld_graph_0">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/off"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sb"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/d"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/on"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            android:weightSum="24">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_10"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_11"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_12"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_13"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_14"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_15"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_16"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_17"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_18"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_19"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_20"
                android:textColor="@android:color/white"
                android:textSize="8sp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_21"
                android:textColor="@android:color/white"
                android:textSize="8sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_22"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_23"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_24"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m"
                android:textColor="@android:color/white"
                android:textSize="8sp" />
        </LinearLayout>

        <com.truckspot.utils.ELDGraph
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/violation"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/graph"
            android:layout_alignTop="@+id/graph"
            android:layout_alignBottom="@+id/graph"
            android:background="#55ff0000"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/hours"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/off_duty_hours"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sb_hours"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/driving_hours"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="8sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/on_duty_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="0.1dp"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textSize="8sp" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/holo_blue_dark" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="0.1dp"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textSize="8sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

